feat: create category is working fine.
